--- a/demo/miniprogramIoT/common.wxss
+++ b/demo/miniprogramIoT/common.wxss
@@ -46,6 +46,9 @@
 .text-btn.disabled {
   color: rgba(0, 0, 0, 0.3);
 }
+.align-right {
+  text-align: right;
+}
 .absolute-right {
   position: absolute;
   right: 0rpx;
