--- a/demo/miniprogramIoT/pages/xp2p-demo-server/demo.wxml
+++ b/demo/miniprogramIoT/pages/xp2p-demo-server/demo.wxml
@@ -21,10 +21,10 @@
       onlyp2p="{{onlyp2pMap && onlyp2pMap.flv}}"
       bind:playerstatechange="onPlayerEvent"
       bind:streamstatechange="onPlayerEvent"
-      bind:playstart="onPlayerEvent"
-      bind:playsuccess="onPlayerEvent"
-      bind:playstop="onPlayerEvent"
-      bind:playend="onPlayerEvent"
+      bind:playstart="onPlayStateEvent"
+      bind:playsuccess="onPlayStateEvent"
+      bind:playstop="onPlayStateEvent"
+      bind:playend="onPlayStateEvent"
       bind:playerror="onPlayError"
       bind:fullscreenchange="onFullScreenChange"
     >
