--- a/demo/miniprogramIoT/player.wxss
+++ b/demo/miniprogramIoT/player.wxss
@@ -1,18 +1,18 @@
 /* 覆盖组件的 wxss */
-.iot-common-player .player-container {
+.iot-p2p-common-player .player-container {
   height: 420rpx;
 }
 
-.iot-common-player .player-container live-player {
+.iot-p2p-common-player .player-container live-player {
   width: 100% !important;
   height: 100% !important;
 }
 
-.iot-mjpg-player .player-container {
+.iot-p2p-mjpg-player .player-container {
   height: 420rpx;
 }
 
-.iot-mjpg-player .player-container image {
+.iot-p2p-mjpg-player .player-container image {
   width: 100% !important;
   height: 100% !important;
 }
