--- a/demo/miniprogramIoT/pages/xp2p-demo-ipc/demo.wxml
+++ b/demo/miniprogramIoT/pages/xp2p-demo-ipc/demo.wxml
@@ -64,9 +64,12 @@
         <view class="debug-info-switch" bindtap="toggleDebugInfo">调试信息</view>
       </view>
     </iot-p2p-player-with-mjpg>
-    <navigator url="/pages/empty/empty" style="color: blue;" hover-class="navigator-hover">打开其他页面（可能触发 live-player 暂停）</navigator>
-    <button bindtap="retryPlayer" disabled="{{!isPlayError}}" type="primary" size="mini">重试</button>
-    <view class="page-section">
+    <view class="page-section page-section-gap">
+      <navigator url="/pages/empty/empty" style="color: blue;" hover-class="navigator-hover">打开其他页面（可能触发 live-player 暂停）</navigator>
+      <button bindtap="retryPlayer" disabled="{{!isPlayError}}" type="primary" size="mini">重试</button>
+    </view>
+    <view class="page-section page-section-gap">
+      <view class="page-section-title">对讲</view>
       <iot-p2p-voice
         id="{{voiceId}}"
         style="display:none"
@@ -91,7 +94,8 @@
         </button>
       </view>
     </view>
-    <view wx:if="{{options.supportPTZ}}" class="page-section">
+    <view wx:if="{{options.supportPTZ}}" class="page-section page-section-gap">
+      <view class="page-section-title">PTZ控制</view>
       <view class="ptz-panel">
         <view class="ptz-controls">
           <view class="ptz-controls-top">
