--- a/demo/miniprogramIoT/pages/index/index.wxml
+++ b/demo/miniprogramIoT/pages/index/index.wxml
@@ -1,3 +1,26 @@
+<template name="itemInfo">
+  <view class="item-info">
+    <view class="item-title">{{item.title}}</view>
+    <view class="item-btns group-button-area">
+      <button type="primary" class="group-button" size="mini"
+        bindtap="gotoPage"
+        data-url="/pages/xp2p-demo-{{item.p2pMode === 'server' ? 'server' : 'ipc'}}/demo?cfg={{item.cfg}}"
+      >
+        P2P监控
+      </button>
+      <block wx:if="{{item.p2pMode !== 'server'}}">
+        <button type="primary" class="group-button {{item.isMjpgDevice ? 'disabled' : ''}}" size="mini"
+          disabled="{{item.isMjpgDevice}}"
+          bindtap="gotoPage"
+          data-url="/pages/xp2p-demo-ipc-playback/demo?cfg={{item.cfg}}"
+        >
+          P2P回放
+        </button>
+      </block>
+    </view>
+  </view>
+</template>
+
 <view class="page-body">
   <view class="page-section page-section-gap">
     <view class="notice-box">
@@ -17,84 +40,25 @@
     <view class="page-section-title">【最近查看设备】</view>
     <view class="margin-left">
       <view class="small-tip">设备类型：{{recentIPCItem.isMjpgDevice ? '图片流设备' : '视频流设备'}}</view>
-      <view class="item-info">
-        <view class="item-title">{{recentIPCItem.title}}</view>
-        <view class="item-btns group-button-area">
-          <button type="primary" class="group-button" size="mini"
-            bindtap="gotoPage"
-            data-url="/pages/xp2p-demo-ipc/demo?cfg={{recentIPCItem.cfg}}"
-          >
-            监控
-          </button>
-          <button type="primary" class="group-button {{recentIPCItem.isMjpgDevice ? 'disabled' : ''}}" size="mini"
-            disabled="{{recentIPCItem.isMjpgDevice}}"
-            bindtap="gotoPage"
-            data-url="/pages/xp2p-demo-ipc-playback/demo?cfg={{recentIPCItem.cfg}}"
-          >
-            回放
-          </button>
-        </view>
-      </view>
+      <template is="itemInfo" data="{{ item: recentIPCItem }}" />
     </view>
   </view>
   <view class="page-section">
     <view class="page-section-title">【1v1-视频流设备】</view>
     <view class="margin-left">
-      <view wx:for="{{listVideoDevices}}" wx:key="cfg" class="item-info">
-        <view class="item-title">{{item.title}}</view>
-        <view class="item-btns group-button-area">
-          <button type="primary" class="group-button" size="mini"
-            bindtap="gotoPage"
-            data-url="/pages/xp2p-demo-ipc/demo?cfg={{item.cfg}}"
-          >
-            监控
-          </button>
-          <button type="primary" class="group-button" size="mini"
-            bindtap="gotoPage"
-            data-url="/pages/xp2p-demo-ipc-playback/demo?cfg={{item.cfg}}"
-          >
-            回放
-          </button>
-        </view>
-      </view>
+      <template is="itemInfo" wx:for="{{listVideoDevices}}" wx:key="cfg" data="{{ item }}" />
     </view>
   </view>
   <view class="page-section">
     <view class="page-section-title">【1v1-图片流设备】</view>
     <view class="margin-left">
-      <view wx:for="{{listMjpgDevices}}" wx:key="cfg" class="item-info">
-        <view class="item-title">{{item.title}}</view>
-        <view class="item-btns group-button-area">
-          <button type="primary" class="group-button" size="mini"
-            bindtap="gotoPage"
-            data-url="/pages/xp2p-demo-ipc/demo?cfg={{item.cfg}}"
-          >
-            监控
-          </button>
-          <button type="primary" class="group-button disabled" size="mini" disabled>
-            回放
-          </button>
-        </view>
-      </view>
+      <template is="itemInfo" wx:for="{{listMjpgDevices}}" wx:key="cfg" data="{{ item }}" />
     </view>
   </view>
   <view class="page-section">
     <view class="page-section-title">【1v多】</view>
     <view class="margin-left">
-      <view wx:for="{{listServerStreams}}" wx:key="cfg" class="item-info">
-        <view class="item-title">{{item.title}}</view>
-        <view class="item-btns group-button-area">
-          <button type="primary" class="group-button" size="mini"
-            bindtap="gotoPage"
-            data-url="/pages/xp2p-demo-server/demo?cfg={{item.cfg}}"
-          >
-            监控
-          </button>
-          <button type="primary" class="group-button disabled" size="mini" disabled>
-            回放
-          </button>
-        </view>
-      </view>
+      <template is="itemInfo" wx:for="{{listServerStreams}}" wx:key="cfg" data="{{ item }}" />
     </view>
   </view>
   <view class="page-section page-section-gap">
